[package]
name = "ludogame"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "libraries/players",
]

[dependencies]
board = { path = "libraries/board" }
players = { path = "libraries/players" }
iplayers = { path = "libraries/iplayers" }
dice = { path = "libraries/dice" }
pieces = { path = "libraries/pieces" }
genetic_algorithm = { path = "libraries/genetic_algorithm" }
game = { path = "libraries/game" }
rand = "0.8.4"
csv = "1.1.6"