[package]
name = "genetic_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "genetic_algorithm"
path = "src/genetic_algorithm.rs"

[dependencies]
iplayers = { path = "../iplayers" }
players = { path = "../players" }
game = { path = "../game" }
rand = "0.8.4"
prettytable-rs = "0.10.0"
rayon = "1.5.1"
csv = "1.1.6"